The correct answers are overlapping the left side border of the Student Summary Report

--- a/app/styles/components/reports/assessment/_gru-questions.scss
+++ b/app/styles/components/reports/assessment/_gru-questions.scss
@@ -27,7 +27,7 @@
     box-shadow: 0px 2px 5px 0px rgba(0,0,0,0.10);
     border-radius: 5px;
     padding: 20px 0 40px 0;
-    display: block;
+    table-layout: fixed;
 
     @media (min-width: $screen-md) {
       padding: 20px 15px 40px 15px;
@@ -45,7 +45,7 @@
 
     }
     th.number {
-      width: 2%;
+      width: 5%;
     }
     th.question {
       width: 25%;
