--- a/app/styles/components/reports/assessment/questions/_qz-hot-text-highlight.scss
+++ b/app/styles/components/reports/assessment/questions/_qz-hot-text-highlight.scss
@@ -1,6 +1,9 @@
 .qz-hot-text-highlight p {
   line-height: 32px;
   span {
+      word-wrap: break-word;
+      overflow: auto;
+      max-width: 10em;
     p {
       display: inline-block;
       margin: 0;
@@ -24,7 +27,4 @@
       background-color: $brand-anonymous;
     }
   }
-
-
-
 }
